--- a/client/package.json
+++ b/client/package.json
@@ -10,14 +10,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-clipboard/clipboard": "^1.16.2",
     "@react-navigation/bottom-tabs": "^7.3.7",
     "@react-navigation/native": "^7.1.3",
     "@react-navigation/native-stack": "^7.3.7",
     "react": "19.0.0",
     "react-native": "0.78.2",
+    "react-native-image-crop-picker": "^0.42.0",
     "react-native-modal": "^14.0.0-rc.1",
+    "react-native-otp-inputs": "^7.4.0",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0",
+    "react-native-svg": "^15.11.2",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
