--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/bottom-tabs": "^7.3.7",
     "@react-navigation/native": "^7.1.3",
     "@react-navigation/native-stack": "^7.3.7",
+    "@reduxjs/toolkit": "^2.6.1",
+    "axios": "^1.8.4",
     "react": "19.0.0",
     "react-native": "0.78.2",
     "react-native-image-crop-picker": "^0.42.0",
@@ -22,6 +24,7 @@
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0",
     "react-native-svg": "^15.11.2",
+    "react-redux": "^9.2.0",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
