--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-clipboard/clipboard": "^1.16.2",
     "@react-navigation/bottom-tabs": "^7.3.7",
     "@react-navigation/native": "^7.1.3",
@@ -25,6 +26,8 @@
     "react-native-screens": "^4.10.0",
     "react-native-svg": "^15.11.2",
     "react-redux": "^9.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
