--- a/client/package.json
+++ b/client/package.json
@@ -19,9 +19,13 @@
     "axios": "^1.8.4",
     "react": "19.0.0",
     "react-native": "0.78.2",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-gifted-chat": "^2.6.3",
     "react-native-image-crop-picker": "^0.42.0",
+    "react-native-keyboard-controller": "^1.17.0",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-otp-inputs": "^7.4.0",
+    "react-native-reanimated": "^3.17.4",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0",
     "react-native-svg": "^15.11.2",
